# fejixwm

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
devtest/: Cargo.toml  README.md
devtest/src/: main.rs
fejixwm/: Cargo.toml
fejixwm/src/: lib.rs
fejixwm_capi/: Cargo.toml
fejixwm_capi/include/fejixwm/: fejixwm.h
fejixwm_capi/src/: lib.rs
fejixwm_core/: Cargo.toml
fejixwm_core/src/: core.rs  errors.rs  events.rs  lib.rs
fejixwm_core/src/interface/: mod.rs
fejixwm_core/src/interface/clipboard/: mod.rs
fejixwm_core/src/interface/graphics_opengl/: mod.rs
fejixwm_core/src/interface/graphics_rawpix/: mod.rs
fejixwm_core/src/interface/null_canvas/: mod.rs
fejixwm_core/src/interface/opengl/: mod.rs
fejixwm_core/src/interface/rawpix/: mod.rs
fejixwm_core/src/interface/window_manip/: mod.rs
fejixwm_platform_x11/: Cargo.toml
fejixwm_platform_x11/src/: basic_impl.rs  core_impl.rs  events_impl.rs  lib.rs  message_processing.rs  shell_client_impl.rs  subsystems_impl.rs  traits_impl.rs  types.rs  types_impl.rs  wm_impl.rs  wm_impl_traits.rs  wm_traits_impl.rs
fejixwm_platform_x11/src/implementation/: mod.rs
fejixwm_platform_x11/src/implementation/null_canvas/: mod.rs
fejixwm_platform_x11/src/implementation/window_manip/: mod.rs
fejixwm_platform_x11/src/interface/: mod.rs
fejixwm_platform_x11/src/interface/rawpix/: mod.rs
src/: lib.rs
src/implementation/: mod.rs
src/implementation/platform/: mod.rs
src/interface/: core.rs  events.rs  mod.rs
src/interface/extern_c/: mod.rs
src/interface/extern_c/include/fejixwm/: fejixwm.h
src/platform/: mod.rs
src/platform/null/: mod.rs
src/platform/x11/: mod.rs
