[package]
name = "fejixwm"
version = "0.0.1"
description = "Window management library"
authors = ["Mark Lagodych <lgd.mrk@gmail.com>"]

edition = "2021"


[features]
# WARNING: lots of unimplemented features

default = ["static-lib"]


# Include C interface
extern-c = []

# --- TYPE OF THE LIBRARY ---

# Statically linked library
static-lib = []
# Dynamically linked library
dynamic-lib = []

# --- PLATFORM ---

# Indicates that any platform was selected
-platform-impl = []
# Windows API
platform-winapi = ["-platform-impl"]
# X11 protocol
platform-x11 = ["-platform-impl"]
# Wayland protocol
platfrom-wayland = ["-platform-impl"]
# Uses Android NDK API
platform-android = ["-platform-impl"]
# Uses macOS Objective-C libraries  
platform-cocoa = ["-platform-impl"]
# Uses iOS Objective-C libraries
platform-cocoa-touch = ["-platform-impl"]
# Uses HTML/JS/WASM stuff
platform-web = ["-platform-impl"]

# --- GRAPHICS APIs ---

# API for accessing raw pixels for software rendering 
graphics-rawpix = []
# Modern OpenGL
graphics-opengl = []
# Vulkan
graphics-vulkan = []
# Microsoft DirectX
graphics-directx = []
# Apple Metal
graphics-metal = []
# WebGL
graphics-webgl = []
# HTML5 canvas
graphics-webcanvas = []

# --- OTHER FEATURES ---

# Chooses OpenGL 3.x / 4.x
f-opengl-desktop = []
# Chooses OpenGL ES 2.x / 3.x
f-opengl-es = []


[lib]


[target.'cfg(all(feature="static-lib", not(feature="extern-c")))'.lib]
crate-type = 'rlib'

[target.'cfg(all(feature="static-lib", feature="extern-c"))'.lib]
crate-type = 'staticlib'

[taarget.'cfg(all(feature="dynamic-lib", not(feature="extern-c")))'.lib]
crate-type = 'dylib'

[target.'cfg(all(feature="dynamic-lib", feature="extern-c"))'.lib]
crate-type = 'cdylib'





[target.'cfg(feature="platform-x11")'.dependencies]
xcb = {version="^1.1.0", features=["xlib_xcb", "sync", "xkb"]}

# TODO Check if this works
[target.'cfg(all(feature="platform-x11", feature="graphics-opengl"))'.features]
graphics-opengl = ["xcb/glx"]