[package]
name = "fejixwm"
version = "0.0.1"
description = "Window management library"
authors = ["Mark Lagodych <lgd.mrk@gmail.com>"]

[dependencies]
fejixwm_core = { path = "../fejixwm_core" }
fejixwm_platform_x11 = { path = "../fejixwm_platform_x11", optional = true }

[features]
platform_x11 = ["fejixwm_platform_x11"]

graphics_rawpix = [
    "fejixwm_platform_x11?/graphics_rawpix",
]