[package]
name = "fejixwm_core"
version = "0.0.1"
description = "Fejix WM platform-independent code"
authors = ["Mark Lagodych <lgd.mrk@gmail.com>"]

edition = "2021"


[lib]


[features]
graphics_rawpix = []
graphics_opengl = []
graphics_vulkan = []
graphics_directx = []
graphics_metal = []
graphics_webgl = []
graphics_webcanvas = []