[package]
name = "fejixwm_platform_x11"
version = "0.0.1"
description = "X11 platform implementation of Fejix WM"

[lib]

[features]
graphics_rawpix = ["fejixwm_core/graphics_rawpix"]

[dependencies]
fejixwm_core = { path = "../fejixwm_core", features = ["window_manip"] }

xcb = { version = "^1.2", features = ["sync", "xkb"] }