[package]
name = "fejixwm_platform_x11"
version = "0.0.1"
description = "X11 platform implementation of Fejix WM"

[lib]

[features]
graphics_rawpix = []
graphics_opengl = ["xcb/glx"]

[dependencies]
fejixwm_core = { path = "../fejixwm_core" }

xcb = { version = "~1.2", features = ["xlib_xcb", "sync"] }
x11 = { version = "~2.20", features = ["xlib"] }